# proceedure_of_uncetainties_analysis_for_solar_simulator

./: README.md  demo_run.py  pyproject.toml
mj_solar_uncertainty/: __init__.py  core.py  io.py  pipeline.py
mj_solar_uncertainty.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
output/: mc_subcell_currents.csv  pipeline_summary.md  step02_A.csv  step02_M.csv  step02_b.csv  step02b_combined_residual_check.csv  step03_uJ_eq4_relative_pct.csv  step04_mc_perturb_breakdown_independent.csv  step04_mc_perturb_breakdown_systematic.csv  step07_eq6_contributions_pct.csv  step07_extras_squared.csv  table1_eq6.csv  table1_eq6.md
sample_data/: e490_00a_amo.xls  generate_sample_data.py  light_combined.csv  light_halogen.csv  light_halogen1.csv  light_halogen2.csv  light_xenon.csv  ref_cell_SR.csv  ref_cell_currents.csv  reference_spectrum_AM0.csv  spectrometric_IV.csv  subcell_SR_bot.csv  subcell_SR_mid.csv  subcell_SR_top.csv
scripts/: plot_readme_figures.py
tests/: test_pipeline.py
