[project]
name = "mj-solar-uncertainty"
version = "0.1.0"
description = "多接合太陽電池ソーラシミュレータの校正不確かさ評価 (Baur & Bett 2005 手法)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.6",
    "tabulate>=0.9",  # for DataFrame.to_markdown
    "xlrd>=2.0.1",    # .xls (ASTM E490 AM0 表など)
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mj_solar_uncertainty*"]
